--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,16 @@
 <resources>
     <string name="app_name">Wally</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_gripper_controls">Gripper Controls</string>
+    <string name="title_controls">Controls</string>
+    <string name="title_settings">Settings</string>
+    <string name="create_task">Create New Task</string>
+    <string name="task_placeholder">Tap to select...</string>
+    <string name="route">Route:</string>
+    <string name="record">Record</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
+    <string name="name">Name:</string>
+    <string name="return_prompt">Return</string>
+    <string name="checkpoint_register">Register Checkpoint?</string>
 </resources>
